Adjust my code to be responsive and wrote SEO

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     </nav>
     <h1>About me</h1>
     <h3>Front-end developer from Stockholm, Sweden</h3>
-    <div class="about-paragraph">
+    <div class="about-paragraph text-center">
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam, illum
         saepe laudantium, numquam magni recusandae nemo magnam quidem blanditiis
