--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Argielyn Lapid is a future front-end developer from Shecodes, please feel free to look around"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,7 +19,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-    <title>Argielyn Lapid</title>
+    <title>Front-end developer | Argielyn Lapid</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
@@ -39,12 +43,20 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="about.html"
+                title="about page"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html#contact"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="about.html#contact"
+                title="Contact me details"
                 >Contact me</a
               >
             </li>
@@ -59,8 +71,8 @@
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
-    <div class="container">
-      <div class="row mt-5">
+    <div class="container app">
+      <div class="row">
         <div class="col-sm-6">
           <img
             src="images/yoga.png"
@@ -69,7 +81,7 @@
           />
         </div>
         <div class="col-sm-6">
-          <h2 class="text-start mb-4">Yoga app</h2>
+          <h2 class="mb-3">Yoga app</h2>
           <br />
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
@@ -85,7 +97,7 @@
 
         <div class="row mt-5">
           <div class="col-sm-6">
-            <h2 class="text-start mb-4">Weather app</h2>
+            <h2 class="mb-3">Weather app</h2>
             <br />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
@@ -117,7 +129,7 @@
             />
           </div>
           <div class="col-sm-6">
-            <h2 class="text-start mb-4">Yogurt app</h2>
+            <h2 class="mb-3">Yogurt app</h2>
             <br />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto
